--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Foundation for Web Apps that use Next.js",
   "main": "index.js",
   "scripts": {
+    "dev": "next dev",
     "test": "test"
   },
   "repository": {
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/niltonfernandesj/web-app-foundation-nextjs/issues"
   },
-  "homepage": "https://github.com/niltonfernandesj/web-app-foundation-nextjs#readme"
+  "homepage": "https://github.com/niltonfernandesj/web-app-foundation-nextjs#readme",
+  "dependencies": {
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  }
 }
