--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "test": "test",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write ."
   },
@@ -25,6 +26,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "prettier": "^3.3.3"
   }
 }
