--- a/infra/compose.yml
+++ b/infra/compose.yml
@@ -1,8 +1,9 @@
 services:
   database:
+    container_name: "postgres-dev"
     image: postgres
     shm_size: 128mb
-    environment:
-      POSTGRES_PASSWORD: "local_password"
+    env_file:
+      -  ../.env.development
     ports:
       - "5432:5432"
