--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "lint:prettier:check": "prettier --check .",
-    "lint:prettier:fix": "prettier --write ."
+    "lint:prettier:fix": "prettier --write .",
+    "migrations:create": "node-pg-migrate -m infra/migrations create",
+    "migrations:up": "node-pg-migrate -m infra/migrations --envPath .env.development up"
   },
   "repository": {
     "type": "git",
@@ -21,8 +23,10 @@
   },
   "homepage": "https://github.com/niltonfernandesj/web-app-foundation-nextjs#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "next": "14.2.5",
-    "pg": "^8.12.0",
+    "node-pg-migrate": "^7.6.1",
+    "pg": "8.12.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
