--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ POSTGRES_PASSWORD=local_password
 POSTGRES_DB=local_db
 POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
+DATABASE_URL=postgres://local_user:local_password@localhost:5432/local_db
