build: add `wait-for-postgres` script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Foundation for Web Apps that use Next.js",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run services:up && npm run wait-for-postgres && npm run migrations:up && next dev",
     "test": "jest",
     "test:watch": "jest --watchAll --runInBand",
     "lint:prettier:check": "prettier --check .",
@@ -12,7 +12,8 @@
     "migrations:create": "node-pg-migrate -m infra/migrations create",
     "migrations:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "services:up": "docker compose -f infra/compose.yml up -d",
-    "services:down": "docker compose -f infra/compose.yml down"
+    "services:down": "docker compose -f infra/compose.yml down",
+    "wait-for-postgres": "node infra/scripts/wait-for-postgres.js"
   },
   "repository": {
     "type": "git",
