--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npm run services:up && npm run wait-for-postgres && npm run migrations:up && next dev",
-    "test": "jest",
+    "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"sleep 5 && next dev\" \"jest --runInBand\"",
     "test:watch": "jest --watchAll --runInBand",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/niltonfernandesj/web-app-foundation-nextjs#readme",
   "dependencies": {
+    "async-retry": "^1.3.3",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
     "next": "14.2.5",
@@ -35,6 +36,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "concurrently": "^9.2.1",
     "jest": "^29.7.0",
     "prettier": "^3.3.3"
   }
