--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test:watch": "jest --watchAll --runInBand",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
+    "lint:eslint:check": "next lint --dir .",
+    "lint:eslint:fix": "next lint --dir . --fix",
     "migrations:create": "node-pg-migrate -m infra/migrations create",
     "migrations:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "services:up": "docker compose -f infra/compose.yml up -d",
@@ -29,7 +31,9 @@
     "async-retry": "^1.3.3",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
-    "next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.6.0",
+    "next": "13.1.6",
     "node-pg-migrate": "^7.6.1",
     "pg": "8.12.0",
     "react": "18.3.1",
@@ -37,6 +41,8 @@
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.4",
     "jest": "^29.7.0",
     "prettier": "^3.3.3"
   }
