ci: add `commitlint` Github Action

--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -37,3 +37,22 @@ jobs:
       - run: npm ci
 
       - run: npm run lint:eslint:check
+  commitlint:
+    name: Commitlint Ubuntu
+    runs-on: ubuntu-latest
+    steps:
+      # Action criada pela comunidade para baixar para máquina de CI
+      # o código na versão específica do pull request realizado.
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      # Action criada pela comunidade para definir na máquina de CI
+      # a versão do Node a ser utilizada.
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "lts/hydrogen"
+
+      - run: npm ci
+
+      - run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
