--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "concurrently": "^9.2.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
