--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "concurrently": "^9.2.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
-    "jest": "^29.7.0",
+    "husky": "9.1.7",
+    "jest": "29.7.0",
     "prettier": "^3.3.3"
   }
 }
